<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="br.com.redrails.heros.NewHeroActivity">

    <TextView
        android:text="@string/hero_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/hero_name"
        android:hint="@string/hero_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/favoriteSkill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/hero_favorite_skill"
        android:hint="@string/favoriteSkill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/ultimateSkill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/hero_ultimate_skill"
        android:hint="@string/ultimateSkill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/hero_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <RatingBar
        android:id="@+id/hero_rating"
        android:numStars="5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/hero_save_button"
        android:text="@string/save_hero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
